{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 333,
  "lineage": "279cb711-f5be-d113-0505-6c6e21bdf320",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd170c943d281c6a",
            "association_id": "eipassoc-0451b5a6dd8ab5da3",
            "domain": "vpc",
            "id": "eipalloc-0bd170c943d281c6a",
            "instance": "i-03edcf4ac5777922f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ddb8f1121900ba86",
            "private_dns": "ip-10-0-1-239.ec2.internal",
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-184-72-86-95.compute-1.amazonaws.com",
            "public_ip": "184.72.86.95",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.web",
            "module.vpc.aws_security_group.ec2_security_group",
            "module.vpc.aws_subnet.public_subnet_az1"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:995744626548:instance/i-03edcf4ac5777922f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03edcf4ac5777922f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "n.vir",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ddb8f1121900ba86",
            "private_dns": "ip-10-0-1-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-52-90-43-51.compute-1.amazonaws.com",
            "public_ip": "52.90.43.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a279b30a35efb84f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b28ae9116a66424",
            "tags": {
              "Name": "myec2420"
            },
            "tags_all": {
              "Name": "myec2420"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa6d593952a4f0d6"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.ec2_security_group",
            "module.vpc.aws_subnet.public_subnet_az1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0025884c37f06724a",
            "association_id": "eipassoc-0276f3cc8ab4768b0",
            "domain": "vpc",
            "id": "eipalloc-0025884c37f06724a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fd6e5a11e2362bfd",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-54-236-114-129.compute-1.amazonaws.com",
            "public_ip": "54.236.114.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995744626548:internet-gateway/igw-03eefb30d5c02489f",
            "id": "igw-03eefb30d5c02489f",
            "owner_id": "995744626548",
            "tags": {
              "Name": "demo-vpc-igw"
            },
            "tags_all": {
              "Name": "demo-vpc-igw"
            },
            "vpc_id": "vpc-00e29107f8e7d89da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0025884c37f06724a",
            "connectivity_type": "public",
            "id": "nat-0481a187cfe27f8c4",
            "network_interface_id": "eni-0fd6e5a11e2362bfd",
            "private_ip": "10.0.1.65",
            "public_ip": "54.236.114.129",
            "subnet_id": "subnet-03b28ae9116a66424",
            "tags": {
              "Name": "demo-vpc-NAT Gateway"
            },
            "tags_all": {
              "Name": "demo-vpc-NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995744626548:route-table/rtb-0fcec73e455bbd18e",
            "id": "rtb-0fcec73e455bbd18e",
            "owner_id": "995744626548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0481a187cfe27f8c4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc-private route table"
            },
            "tags_all": {
              "Name": "demo-vpc-private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e29107f8e7d89da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995744626548:route-table/rtb-09484c2d18a1a28db",
            "id": "rtb-09484c2d18a1a28db",
            "owner_id": "995744626548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03eefb30d5c02489f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc-public route table"
            },
            "tags_all": {
              "Name": "demo-vpc-public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e29107f8e7d89da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1fa91218996f159",
            "route_table_id": "rtb-0fcec73e455bbd18e",
            "subnet_id": "subnet-0248ac5ab537b9b4e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0362da7ff1936678f",
            "route_table_id": "rtb-0fcec73e455bbd18e",
            "subnet_id": "subnet-0f4f62a67d5668dac"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0190a33c21ad6060f",
            "route_table_id": "rtb-09484c2d18a1a28db",
            "subnet_id": "subnet-03b28ae9116a66424"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031e97a44bcea6a58",
            "route_table_id": "rtb-09484c2d18a1a28db",
            "subnet_id": "subnet-0c4772feb7053dc42"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995744626548:security-group/sg-0aa6d593952a4f0d6",
            "description": "enable http/https access on port 80/443 \u0026 dynamodb 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa6d593952a4f0d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "995744626548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysg0001"
            },
            "tags_all": {
              "Name": "mysg0001"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e29107f8e7d89da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995744626548:subnet/subnet-0248ac5ab537b9b4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0248ac5ab537b9b4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995744626548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-private subnet az1"
            },
            "tags_all": {
              "Name": "demo-vpc-private subnet az1"
            },
            "vpc_id": "vpc-00e29107f8e7d89da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995744626548:subnet/subnet-0f4f62a67d5668dac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4f62a67d5668dac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "995744626548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-private subnet az2"
            },
            "tags_all": {
              "Name": "demo-vpc-private subnet az2"
            },
            "vpc_id": "vpc-00e29107f8e7d89da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995744626548:subnet/subnet-03b28ae9116a66424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b28ae9116a66424",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "995744626548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-pub_subnet_az1"
            },
            "tags_all": {
              "Name": "demo-vpc-pub_subnet_az1"
            },
            "vpc_id": "vpc-00e29107f8e7d89da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995744626548:subnet/subnet-0c4772feb7053dc42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4772feb7053dc42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "995744626548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-pub_subnet_az2"
            },
            "tags_all": {
              "Name": "demo-vpc-pub_subnet_az2"
            },
            "vpc_id": "vpc-00e29107f8e7d89da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995744626548:vpc/vpc-00e29107f8e7d89da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03695b635640b3395",
            "default_route_table_id": "rtb-09b1d5c2313c4c94d",
            "default_security_group_id": "sg-04acdeede3255c432",
            "dhcp_options_id": "dopt-083f2d249a8e00a33",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00e29107f8e7d89da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b1d5c2313c4c94d",
            "owner_id": "995744626548",
            "tags": {
              "Name": "demo-vpc-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc-vpc"
            }
          }
        }
      ]
    }
  ]
}